cmake_minimum_required(VERSION 3.10)
project(TestConsumer)

find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(libmx2 REQUIRED)
#add_compile_definitions(WITH_GL)  
#add_compile_definitions(WITH_MIXER)  
add_executable(test_app main.cpp)
target_link_libraries(test_app PRIVATE libmx2::mx)
